docs/book/samples/ch02/map_miss.out
error[endpoint]: unhandled err reached main: "missing index "nobody""
  born in main at map_miss.kso:3
