docs/book/samples/ch02/map_miss.kso
ages = { "clay": 47 }
print "{ages["nobody"]!}"
